# fresco

./: settings.gradle
imagepipeline-base/: build.gradle
imagepipeline-base/src/main/java/com/facebook/imageformat/: DefaultImageFormatChecker.java  DefaultImageFormats.java  ImageFormatChecker.java
imagepipeline-base/src/main/java/com/facebook/imagepipeline/image/: EncodedImage.java
imagepipeline-base/src/main/java/com/facebook/imageutils/: KpgUtil.java
imagepipeline/src/main/java/com/facebook/imagepipeline/decoder/: DefaultImageDecoder.java
imagepipeline/src/main/java/com/facebook/imagepipeline/platform/: ArtDecoder.java  DalvikPurgeableDecoder.java  GingerbreadPurgeableDecoder.java  KitKatPurgeableDecoder.java  PlatformDecoder.java
samples/demo/: build.gradle
samples/demo/src/main/: AndroidManifest.xml
samples/demo/src/main/java/com/facebook/samples/demo/: DemoApplication.java  ImageActivity.java  MainActivity.java  MyAdapter.java
samples/demo/src/main/java/com/facebook/samples/demo/kpg/: KpgArtDecoder.java  KpgCustomImageFormatConfigurator.java  KpgImageDecoder.java  KpgImageFormat.java  KpgImageFormatChecker.java  KpgKitKatPurgeableDecoder.java  KpgPlatformDecoder.java  KpgUtil.java
samples/demo/src/main/res/layout/: activity_main.xml  image.xml  item_listview.xml
static-kpg/: CMakeLists.txt  build.gradle  proguard-rules.pro
static-kpg/src/androidTest/java/com/example/static_kpg/: ExampleInstrumentedTest.java
static-kpg/src/main/: AndroidManifest.xml
static-kpg/src/main/jni/: Application.mk
static-kpg/src/main/jni/kpg/: Android.mk  libkpg.cpp  libkpg.h
static-kpg/src/main/jni/kpg/include/libavcodec/: avcodec.h
static-kpg/src/main/jni/kpg/include/libavformat/: avformat.h  url.h
static-kpg/src/main/jni/kpg/include/libavutil/: ffversion.h
static-kpg/src/main/jni/kpg/include/libffmpeg/: config.h
static-kpg/src/main/res/values/: strings.xml
static-kpg/src/test/java/com/example/static_kpg/: ExampleUnitTest.java
